# plugins

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
architecture/: index.html
changelog/: index.html
docs/: api.md  architecture.md  index.md
search/: search_index.json
src/qualdatan_plugins/: __init__.py  bundle.py  cache.py  loader.py  manager.py  registry.py  server_client.py  verify.py
tests/: conftest.py  test_bundle.py  test_cache.py  test_loader.py  test_manager.py  test_registry.py  test_server_client.py  test_verify.py
